// Package: net.ikigai.cds
// Module: cabinet.services
//
// Author: Narcis M. Pap
// Copyright (c) 2018 Ikigai Cloud. All rights reserved.

syntax = "proto3";
package cds.cabinet.v1;

import "shared.proto";
import "meta.proto";

// Meta are out-of-band K/V property storage units for Nodes or Edges

// Schematic Representation:
// Node: /m/n/{NODE_ID}/{PROPERTY_ID} = {BIN}
// Edge: /m/e/{SUBJECT}/{PREDICATE}/{TARGET}/{PROPERTY_ID} = {BIN}

// IRI Relative Representation:
// Node: ./m/n/{NODE_ID}/{PROPERTY_ID}
// Edge: ./m/e/{SUBJECT}/{PREDICATE}/{TARGET}/{PROPERTY_ID}

message MetaGetResponse{
    bytes val = 1;
}

message MetaListRequest{
    ListOptions opt = 1;
    Meta meta = 10;

    bool include_node = 20;
    bool include_property = 21;
    bool include_value = 22;
    bool include_subject = 23;
    bool include_predicate = 24;
    bool include_target = 25;
}
